removed hits count - it was not accurate enough to be useful. Added text describtions, and Word Cloud

--- a/heidisandbox/Scrape - Download - Scrape.ipynb
+++ b/heidisandbox/Scrape - Download - Scrape.ipynb
@@ -29,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current number of Dublin rental ads: 300\n"
+      "Current number of Dublin rental ads: 20\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
     "\n",
     "daftresults_urlroot = 'http://www.daft.ie/dublin/apartments-for-rent/?s%5Bignored_agents%5D%5B0%5D=5732&s%5Bignored_agents%5D%5B1%5D=428&s%5Bignored_agents%5D%5B2%5D=1551&s%5Bsort_by%5D=date&s%5Bsort_type%5D=d&offset='\n",
     "allAdUrls = []\n",
-    "number_of_adds = 300\n",
+    "number_of_adds = 10\n",
     "\n",
     "def getAdUrls(pageresults):\n",
     "    \n",
@@ -75,9 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Rental Ad URLs are now in this array: allAdUrls\n",
@@ -98,9 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tarfile\n",
@@ -123,33 +119,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "issue reading in page daftpages/26-marlborough-street-dublin-1-dublin-1-dublin-1774504.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/cathedral-court-dublin-2-dublin-1771875.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/city-gate-st-augustines-st-dublin-8-dublin-1771830.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/daft_ad_108.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/daft_ad_167.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/daft_ad_170.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/daft_ad_173.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/daft_ad_180.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/daft_ad_181.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/daft_ad_182.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/daft_ad_25.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/daft_ad_257.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/daft_ad_351.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/daft_ad_398.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/daft_ad_503.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/marine-court-crofton-road-dunlaoghaire-dun-laoghaire-dublin-1773045.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/newcastle-boulevard-newcastle-dublin-1772908.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/saint-mobhi-boithrn-glasnevin-dublin-1774257.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/the-plaza-swords-dublin-1772641.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/trinity-square-townsend-street-dublin-2-dublin-1772442.html. Skipping this Ad.\n"
+      "issue reading in page daftpages/forbes-quay-grand-canal-dock-dublin-1777944.html. Skipping this Ad.\n",
+      "issue reading in page daftpages/sub. Skipping this Ad.\n"
      ]
     }
    ],
@@ -158,9 +136,9 @@
     "import re\n",
     "import json\n",
     "import csv\n",
+    "import os\n",
+    "from bs4 import BeautifulSoup\n",
     "\n",
-    "\n",
-    "num_of_rows = number_of_adds\n",
     "data_csv = 'data/scraped_data.csv'\n",
     "all_orig_field_names = [\n",
     "    'property_id',\n",
@@ -234,8 +212,25 @@
     "    \n",
     "        ad_data = json.loads(feature_str)  \n",
     "        \n",
-    "        field_names = ad_data.keys()\n",
+    "        # now remove all script and style elements\n",
+    "        for script in soup([\"script\", \"style\"]):\n",
+    "             script.extract() \n",
     "        \n",
+    "        # Get description\n",
+    "        try:\n",
+    "            property_description_text = soup.find('div', id=\"description\") \\\n",
+    "            .text \\\n",
+    "            .replace(\"\\n\",\" \") \\\n",
+    "            .replace(\"Property Description:\",\"\") \\\n",
+    "            .split(\" Facilities:\")[0]\n",
+    "        except:\n",
+    "            property_description_text = \"\"\n",
+    "\n",
+    "        property_description_dict = {}\n",
+    "        property_description_dict['property_description'] = property_description_text\n",
+    "            \n",
+    "       \n",
+    "        # Split out the facilities into their own columns\n",
     "        facilities = ad_data['facility'].split(',')\n",
     "        facilties_dict = dict.fromkeys(all_facilities)\n",
     "        for facility in facilities:\n",
@@ -244,13 +239,18 @@
     " \n",
     "\n",
     "        # check for missing fields (mostly seller_id and seller_name), and add them with empty vals if required\n",
+    "        field_names = ad_data.keys()\n",
     "        missing_fiels = set(all_orig_field_names) - set(field_names)\n",
     "        for missing in missing_fiels:\n",
     "            ad_data[missing] = \"\"\n",
     "        \n",
+    "        # add facilities and property description to overall data\n",
     "        ad_data.update(facilties_dict)\n",
+    "        ad_data.update(property_description_dict)\n",
     "        \n",
-    "        all_field_names = all_orig_field_names + all_facilities\n",
+    "        all_field_names = all_orig_field_names + all_facilities + ['property_description']\n",
+    "        \n",
+    "        \n",
     "        \n",
     "        writer = csv.DictWriter(csvfile, fieldnames=all_field_names)\n",
     "        if idx == 0: \n",
@@ -270,13 +270,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -292,7 +305,6 @@
        "      <th>available_from</th>\n",
        "      <th>lease_units</th>\n",
        "      <th>...</th>\n",
-       "      <th>Washing Machine</th>\n",
        "      <th>Serviced Property</th>\n",
        "      <th>Pets Allowed</th>\n",
        "      <th>Wheelchair Access</th>\n",
@@ -302,6 +314,7 @@
        "      <th>Dishwasher</th>\n",
        "      <th>House Alarm</th>\n",
        "      <th>Internet</th>\n",
+       "      <th>property_description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -318,7 +331,6 @@
        "      <td>2017-10-01</td>\n",
        "      <td>months</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -328,6 +340,7 @@
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>*** UNFURNISHED***   Irish Residential Propert...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -342,7 +355,6 @@
        "      <td>2017-09-15</td>\n",
        "      <td>months</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -352,6 +364,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>True</td>\n",
+       "      <td>***** HERBERT PROPERTY SERVICES****are delight...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -366,7 +379,6 @@
        "      <td>2017-09-18</td>\n",
        "      <td>months</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -376,58 +388,59 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>True</td>\n",
+       "      <td>Rating to be updated (new windows to be delive...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1772865</td>\n",
-       "      <td>109 Geraldstown Wood, Santry, Dublin 9</td>\n",
-       "      <td>apartment</td>\n",
-       "      <td>KELLY BRADSHAW DALTON</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>agent</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2017-09-13</td>\n",
-       "      <td>months</td>\n",
-       "      <td>...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1771138</td>\n",
-       "      <td>11 saunders house, spencer dock, Dublin 1, Dub...</td>\n",
+       "      <td>1779138</td>\n",
+       "      <td>10  Gandon Hall, Gardners Street, Dublin 1, Du...</td>\n",
        "      <td>apartment</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>private</td>\n",
        "      <td>no</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2017-09-16</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2017-10-06</td>\n",
        "      <td>months</td>\n",
        "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>SHORT TERM OR LONG TERM LETTING-A renovated on...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1779394</td>\n",
+       "      <td>10 The Clayton, The Gasworks, Barrow Street, D...</td>\n",
+       "      <td>apartment</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>private</td>\n",
+       "      <td>no</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2017-11-10</td>\n",
+       "      <td>months</td>\n",
+       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>CLAYTON, THE GASWORKS, BARROW STREET, DUBLIN 4...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 37 columns</p>\n",
+       "<p>5 rows × 38 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -435,41 +448,55 @@
        "0      1772670    1 BED, Tallaght Cross West, Tallaght, Dublin 24   \n",
        "1      1773305                1 Palace Street, Dublin 2, Dublin 2   \n",
        "2      1773577  10 Clarinda House, Clarinda Park West, Dun Lao...   \n",
-       "3      1772865             109 Geraldstown Wood, Santry, Dublin 9   \n",
-       "4      1771138  11 saunders house, spencer dock, Dublin 1, Dub...   \n",
+       "3      1779138  10  Gandon Hall, Gardners Street, Dublin 1, Du...   \n",
+       "4      1779394  10 The Clayton, The Gasworks, Barrow Street, D...   \n",
        "\n",
        "  property_type                seller_name  seller_id seller_type  \\\n",
        "0     apartment                       IRES     9871.0       agent   \n",
        "1     apartment  Herbert Property Services     7549.0       agent   \n",
        "2     apartment                        NaN        NaN     private   \n",
-       "3     apartment      KELLY BRADSHAW DALTON       11.0       agent   \n",
+       "3     apartment                        NaN        NaN     private   \n",
        "4     apartment                        NaN        NaN     private   \n",
        "\n",
-       "  open_viewing  no_of_photos available_from lease_units   ...     \\\n",
-       "0           no             3     2017-10-01      months   ...      \n",
-       "1           no             6     2017-09-15      months   ...      \n",
-       "2           no             8     2017-09-18      months   ...      \n",
-       "3          yes             6     2017-09-13      months   ...      \n",
-       "4           no            10     2017-09-16      months   ...      \n",
+       "  open_viewing  no_of_photos available_from lease_units  \\\n",
+       "0           no             3     2017-10-01      months   \n",
+       "1           no             6     2017-09-15      months   \n",
+       "2           no             8     2017-09-18      months   \n",
+       "3           no             5     2017-10-06      months   \n",
+       "4           no             7     2017-11-10      months   \n",
        "\n",
-       "   Washing Machine Serviced Property Pets Allowed  Wheelchair Access  \\\n",
-       "0             True               NaN          NaN                NaN   \n",
-       "1             True               NaN          NaN                NaN   \n",
-       "2             True               NaN          NaN                NaN   \n",
-       "3             True               NaN          NaN                NaN   \n",
-       "4             True               NaN          NaN                NaN   \n",
+       "                         ...                          Serviced Property  \\\n",
+       "0                        ...                                        NaN   \n",
+       "1                        ...                                        NaN   \n",
+       "2                        ...                                        NaN   \n",
+       "3                        ...                                        NaN   \n",
+       "4                        ...                                        NaN   \n",
        "\n",
-       "   Central Heating Microwave  Smoking  Dishwasher House Alarm Internet  \n",
-       "0             True      True      NaN        True         NaN      NaN  \n",
-       "1             True      True      NaN         NaN         NaN     True  \n",
-       "2             True      True      NaN         NaN         NaN     True  \n",
-       "3             True      True      NaN        True         NaN      NaN  \n",
-       "4              NaN       NaN      NaN         NaN         NaN      NaN  \n",
+       "  Pets Allowed Wheelchair Access  Central Heating  Microwave Smoking  \\\n",
+       "0          NaN               NaN             True       True     NaN   \n",
+       "1          NaN               NaN             True       True     NaN   \n",
+       "2          NaN               NaN             True       True     NaN   \n",
+       "3          NaN              True             True       True     NaN   \n",
+       "4          NaN               NaN             True       True     NaN   \n",
        "\n",
-       "[5 rows x 37 columns]"
+       "   Dishwasher  House Alarm Internet  \\\n",
+       "0        True          NaN      NaN   \n",
+       "1         NaN          NaN     True   \n",
+       "2         NaN          NaN     True   \n",
+       "3         NaN          NaN     True   \n",
+       "4        True          NaN     True   \n",
+       "\n",
+       "                                property_description  \n",
+       "0  *** UNFURNISHED***   Irish Residential Propert...  \n",
+       "1  ***** HERBERT PROPERTY SERVICES****are delight...  \n",
+       "2  Rating to be updated (new windows to be delive...  \n",
+       "3  SHORT TERM OR LONG TERM LETTING-A renovated on...  \n",
+       "4  CLAYTON, THE GASWORKS, BARROW STREET, DUBLIN 4...  \n",
+       "\n",
+       "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,9 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
