splitting data visualization from prep; Updating prediction model to add a pre-step that maps text descriptions to price ranges

--- a/heidisandbox/Scrape - Download - Scrape.ipynb
+++ b/heidisandbox/Scrape - Download - Scrape.ipynb
@@ -29,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current number of Dublin rental ads: 20\n"
+      "Current number of Dublin rental ads: 40\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
     "\n",
     "daftresults_urlroot = 'http://www.daft.ie/dublin/apartments-for-rent/?s%5Bignored_agents%5D%5B0%5D=5732&s%5Bignored_agents%5D%5B1%5D=428&s%5Bignored_agents%5D%5B2%5D=1551&s%5Bsort_by%5D=date&s%5Bsort_type%5D=d&offset='\n",
     "allAdUrls = []\n",
-    "number_of_adds = 10\n",
+    "number_of_adds = 30\n",
     "\n",
     "def getAdUrls(pageresults):\n",
     "    \n",
@@ -119,15 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "issue reading in page daftpages/forbes-quay-grand-canal-dock-dublin-1777944.html. Skipping this Ad.\n",
-      "issue reading in page daftpages/sub. Skipping this Ad.\n"
+      "issue reading in page daftpages/forbes-quay-grand-canal-dock-dublin-1777944.html. Skipping this Ad.\n"
      ]
     }
    ],
@@ -251,7 +250,6 @@
     "        all_field_names = all_orig_field_names + all_facilities + ['property_description']\n",
     "        \n",
     "        \n",
-    "        \n",
     "        writer = csv.DictWriter(csvfile, fieldnames=all_field_names)\n",
     "        if idx == 0: \n",
     "            writer.writeheader()\n",
@@ -270,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -496,14 +494,12 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "data_csv = 'data/scraped_data.csv'\n",
     "df = pd.read_csv(data_csv)\n",
     "\n",
